--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,39 +8,34 @@ on:
 jobs:
   build-train-deploy:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pandas numpy scikit-learn xgboost mlflow joblib huggingface_hub streamlit
-
       - name: Data registration
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_DATASET_ID: ${{ vars.HF_DATASET_ID }}
         run: python week_3_mls/model_building/data_register.py
-
       - name: Prepare data
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_DATASET_ID: ${{ vars.HF_DATASET_ID }}
         run: python week_3_mls/model_building/prep.py
-
       - name: Train & register best model
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_MODEL_ID: ${{ vars.HF_MODEL_ID }}
           HF_DATASET_ID: ${{ vars.HF_DATASET_ID }}
         run: python week_3_mls/model_building/train.py
-
       - name: Deploy to Hugging Face Space
         if: ${{ success() }}
         env:
