--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-train-deploy:
     runs-on: ubuntu-latest
-    environment: production
+    environment: HF_TOKEN
     steps:
       - name: Checkout
         uses: actions/checkout@v4
